<resources>
    <string name="app_name">groupTesting1</string>
    <string name="itemName">fufu</string>
    <string name="itemD">testing</string>
    <string name="price">0</string>
    <string name="values">0</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="nega">-</string>
    <string name="pluss">+</string>
    <string name="title_activity_main_activity2for_print">MainActivity2forPrint</string>
    <string name="cart">Cart</string>
    <string name="list">Cart</string>
    <string name="name">TextView</string>
    <string name="textview">TextView</string>
    <string name="total">TextView</string>
    <string name="valuee">TextView</string>string>
</resources>